...
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:linkError="@{viewModel.linkErrorText}">

                    <EditText
                        android:id="@+id/link_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_edit_link_link_hint"
                        android:inputType="text|textNoSuggestions"
                        android:maxLines="1"
                        android:text="@={viewModel.linkLink}"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/checkbox_disabled"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:labelFor="@+id/checkbox_disabled"
                        android:text="@string/add_edit_link_disabled_hint"
                        android:gravity="center_vertical|end" />

...

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/link_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_edit_link_name_hint"
                        android:inputType="text|textNoSuggestions"
                        android:maxLines="1"
                        android:text="@={viewModel.linkName}"
...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/link_tags_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.bytesforge.linkasanote.laano.TagsCompletionView
                        android:id="@+id/link_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_edit_link_tags_hint"
                        android:inputType="text|textNoSuggestions|textMultiLine"
                        android:lineSpacingExtra="@dimen/tags_line_spacing_extra"
                        android:onFocusChange="@{viewModel::onTagsFocusChange}" />
...
