...
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">LaaNo</string>
    <string name="app_name_full">LaaNo: Link as a Note</string>
    <string name="placeholder_title">placeholder</string>
    <string name="placeholder_text">This is a placeholder</string>
    <string name="error_database">Cannot access the database, please reinstall the application</string>
    <string name="status_loading">Loading…</string>
    <string name="status_enabled">enabled</string>
    <string name="status_disabled">disabled</string>
...
    <string name="dialog_button_keep_notes">Keep Notes</string>
    <string name="dialog_button_upload">Upload</string>
    <string name="dialog_button_download">Download</string>
    <string name="dialog_button_continue">Continue</string>
    <string name="dialog_button_settings">Settings</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="laano_tab_links_title">Links</string>
    <string name="laano_tab_favorites_title">Favorites</string>
    <string name="laano_tab_notes_title">Notes</string>
    <string name="laano_permission_get_accounts">GET ACCOUNTS (Contacts) permission is needed to show the list of existing accounts</string>
    <string name="laano_account_added">A new account has been added</string>
    <string name="laano_offline">Application offline, please enable Internet connection</string>
    <string name="laano_not_syncable">Unable to access the Cloud storage, please log in again</string>
    <string name="laano_shortcut_add_link">Add Link</string>
    <string name="laano_shortcut_add_favorite">Add Favorite</string>
...
    <string name="pref_summary_clipboard_fill_in_forms">Paste a normalized and extend clipboard content to the new forms</string>
    <string name="pref_title_clipboard_parameter_white_list">Preserve parameters in the URL query</string>
    <string name="pref_summary_clipboard_parameter_white_list">Completely remove the query string from the URL</string>
    <string name="pref_snackbar_backup_failed">Backup is failed</string>
    <string name="pref_snackbar_permission_write_external_storage">WRITE EXTERNAL STORAGE (Access files) permission is needed to store the backup</string>
    <string name="pref_snackbar_restore_failed">Restore is failed: %s</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="actionbar_title_new_favorite">New Favorite</string>
    <string name="actionbar_title_edit_favorite">Edit Favorite</string>
    <string name="actionbar_title_about">About</string>
    <string name="filter_all">All</string>
    <string name="filter_link">Selected Link</string>
    <string name="filter_favorite">Selected Favorite</string>
...
    <string name="add_edit_favorite_tags_hint">Tags</string>
    <string name="add_edit_favorite_new_button_title">Create</string>
    <string name="add_edit_favorite_edit_button_title">Update</string>
    <string name="add_edit_favorite_warning_empty">Favorite\'s Name and at least one Tag must be specified</string>
    <string name="add_edit_favorite_warning_not_existed">The requested Favorite has not already existed</string>
    <string name="add_edit_favorite_error_name_duplicated">Favorite with the same name already exists</string>
    <string name="actionbar_title_manage_accounts">Manage accounts</string>
    <string name="item_manage_accounts_add">Add account</string>
    <string name="item_manage_accounts_edit_button">Edit account</string>
    <string name="item_manage_accounts_delete_button">Delete account</string>
    <string name="item_manage_accounts_logo">Account</string>
    <string name="manage_accounts_removal_confirmation_title">Delete confirmation</string>
    <string name="manage_accounts_removal_confirmation_message">Delete account %s?\n\nThis action cannot be undone.</string>
...
