<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ LaaNo Android application
  ~
  ~ @author Aleksandr Borisenko <developer@laano.net>
  ~ Copyright (C) 2017 Aleksandr Borisenko
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel"
            type="com.bytesforge.linkasanote.laano.LaanoViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".laano.LaanoActivity"
        tools:openDrawer="start">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--|snap-->
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/Laano.Toolbar"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/Laano.Popup" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Laano.TabLayout"
                    app:tabMode="fixed"
                    app:tabGravity="fill" />
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/laano_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_gravity="end|bottom"
                app:srcCompat="@drawable/ic_add"
                app:fabSize="normal" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <!-- Navigation Drawer -->
        <!-- app:headerLayout="@layout/drawer_header" -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/drawer_actions"
            bind:headerViewModel="@{viewModel.headerViewModel}" />
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
