<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/accounts_menu_group">

        <item
            android:id="@+id/add_account_menu_item"
            android:icon="@drawable/ic_person_add"
            android:title="@string/drawer_actions_add_account" />
        <item
            android:id="@+id/manage_accounts_menu_item"
            android:icon="@drawable/ic_person"
            android:title="@string/drawer_actions_manage_accounts" />
    </group>
    <group android:id="@+id/sync_menu_group">

        <item
            android:id="@+id/sync_menu_item"
            android:icon="@drawable/ic_sync"
            android:title="@string/drawer_actions_sync_start"
            android:enabled="false" />
        <item
            android:id="@+id/sync_log_menu_item"
            android:icon="@drawable/ic_receipt"
            android:title="@string/drawer_actions_sync_log" />
    </group>
    <group android:id="@+id/application_menu_group">

        <item
            android:id="@+id/settings_menu_item"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_actions_settings" />
        <item
            android:id="@+id/about_menu_item"
            android:icon="@drawable/ic_info"
            android:title="@string/drawer_actions_about" />
    </group>
</menu>