...
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/screen_edge_padding"
            bind:snackbarId="@{viewModel.snackbarId}">

            <TextView
                android:id="@+id/application_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_edit_account_logo_margin_top"
                android:text="@string/app_name_full"
                android:textSize="@dimen/add_edit_account_title_text_size" />

...
